# fe-contracts-lineage-workshop

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.atlan/: config.yaml  data_sources.yaml.example
.atlan.example/: config.yaml.example  data_sources.yaml.example
datacontracts/: contract_verification.py  marketing_campaign.yaml  marketing_campaign_dataset.yaml.example  marketing_view.yaml.example  readme.md
sql/: create_dataset.sql
